[ JVMTI ] Update